-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0
-
None
-
Windows host, Linux target
-
13a947d119c4722461759f1aeb6b61e93e9be210
In f2cfd3c01a2876150aa7fdc0a44adee33029f2c9 the path type was changed to require an existing command. This breaks the use-case of a Windows host targetting a non-Windows gdbserver with ELF, which is not considered executable on Windows.
For Gerrit Dashboard: QTCREATORBUG-14412 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
111907,2 | Debugger: Fix attaching to running debug server | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |